--- a/shieroj-backend-question-service/src/main/resources/application.yml
+++ b/shieroj-backend-question-service/src/main/resources/application.yml
@@ -28,10 +28,10 @@ spring:
     timeout: 5000
     password: 123456
     connect-timeout: 100000
-  # rabbitmq 信息
+  # todo rabbitmq 信息
   rabbitmq:
-    host: xxxxxxx
-    password: xxxxxx
+    host: xxxxx
+    password: xxxx
     username: xxxxx
     port: 5672
     virtual-host: /
